@@ -43,7 +43,7 @@ void eat_special_food(object *who, object *food);
 void apply_lighter(object *who, object *lighter);
 void scroll_failure(object *op, int failure, int power);
 void apply_changes_to_player(object *pl, object *change);
-void apply_positioning_system( object* pl, object* gps );
+void apply_positioning_system(object *pl, object *gps);
 /* attack.c */
 void cancellation(object *op);
 int did_make_save_item(object *op, int type, object *originator);
@@ -71,14 +71,21 @@ int checkbanned(char *login, char *host);
 /* build_map.c */
 void remove_marking_runes(struct mapdef *map, short x, short y);
 int find_unused_connected_value(struct mapdef *map);
+int find_or_create_connection_for_map(object *pl, short x, short y);
 object *get_wall(struct mapdef *map, int x, int y);
 void fix_walls(struct mapdef *map, int x, int y);
+void apply_builder_floor(object *pl, object *material, short x, short y);
+void apply_builder_wall(object *pl, object *material, short x, short y);
+void apply_builder_item(object *pl, object *item, short x, short y);
+void apply_builder_remove(object *pl, int dir);
+void apply_map_builder(object *pl, int dir);
 /* c_chat.c */
 int command_say(object *op, char *params);
 int command_me(object *op, char *params);
 int command_cointoss(object *op, char *params);
 int command_orcknuckle(object *op, char *params);
 int command_shout(object *op, char *params);
+int command_chat(object *op, char *params);
 int command_tell(object *op, char *params);
 int command_reply(object *op, char *params);
 int command_nod(object *op, char *params);
@@ -255,6 +262,7 @@ void change_spell(object *op, char k);
 int command_rotateshoottype(object *op, char *params);
 /* c_wiz.c */
 int command_loadtest(object *op, char *params);
+void do_wizard_hide(object *op, int silent_dm);
 int command_hide(object *op, char *params);
 int command_setgod(object *op, char *params);
 int command_banish(object *op, char *params);
@@ -282,24 +290,26 @@ int command_stats(object *op, char *params);
 int command_abil(object *op, char *params);
 int command_reset(object *op, char *params);
 int command_nowiz(object *op, char *params);
+int do_wizard_dm(object *op, char *params, int silent);
 int command_dm(object *op, char *params);
-int command_dmhide(object *op, char *params);
 int command_invisible(object *op, char *params);
+object *get_spell_by_name(char *spell_name);
 int command_learn_spell(object *op, char *params);
 int command_learn_special_prayer(object *op, char *params);
 int command_forget_spell(object *op, char *params);
 int command_listplugins(object *op, char *params);
 int command_loadplugin(object *op, char *params);
 int command_unloadplugin(object *op, char *params);
-int command_diff( object* op, char* params );
-void dm_stack_pop( player* pl );
-object* dm_stack_peek( player* pl );
-void dm_stack_push( player* pl, tag_t item );
-object* get_dm_object( player* pl, char** params, int* from );
-int command_stack_clear( object* op, char* params );
-int command_stack_pop( object* op, char* params );
-int command_stack_push( object* op, char* params );
-int command_stack_list( object* op, char* params );
+int command_dmhide(object *op, char *params);
+void dm_stack_pop(player *pl);
+object *dm_stack_peek(player *pl);
+void dm_stack_push(player *pl, tag_t item);
+object *get_dm_object(player *pl, char **params, int *from);
+int command_stack_pop(object *op, char *params);
+int command_stack_push(object *op, char *params);
+int command_stack_list(object *op, char *params);
+int command_stack_clear(object *op, char *params);
+int command_diff(object *op, char *params);
 /* commands.c */
 void init_commands(void);
 CommFunc find_oldsocket_command(char *cmd);
