@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+This commit adds the functionality of patch 991916, although the patch
+as submitted was used as a baseline to start from.
+include/sproto.h: rebuilt
+server/c_chat.c: Rename command_chat() to command_tell_all() which takes
+   a few more optional parameters.  Add command_shout() and command_chat()
+   that invoke command_tell_all() with the appropriate changes.
+server/commands.c: Add chat to list of command table.
+MSW 2004-11-08
+
 plugin/plugin_python.c: Run the script python_init.py right after
    initializing the interpreter.
 Andreas Kirschbaum 2004-10-21
